--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,19 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
-.bg-gif{
+
+.bg-gif {
     /* position: fixed; */
     background: #040404 url("../imgs/ezgif-5-3e4190b650.gif") top right no-repeat;
     background-size: cover;
 }
-.text-w{
+
+.text-w {
     font-weight: 1000;
+}
+
+.responsive-iframe {
+    width: 100%;
+    height: 500%;
 }
